[package]
name = "layout-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1"
#layout-trait = { git = "https://github.com/perlindgren/layout-trait.git" }
layout-trait = { path = "../layout-trait" }
#heapless = "0.7.16"

[lib]
proc-macro = true

[workspace]

members = ["derive_examples"]
